Fix: Correct alignment error when used with other components on the same line of a DT layout

--- a/css/buttons.dataTables.scss
+++ b/css/buttons.dataTables.scss
@@ -64,7 +64,6 @@ div.dt-buttons {
 		box-sizing: border-box;
 		margin-left: 0.167em;
 		margin-right: 0.167em;
-		margin-bottom: 0.333em;
 		padding: 0.5em 1em;
 		cursor: pointer;
 		font-size: 0.88em;
